--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a title="iPad" href="itms-services://?action=download-manifest&url=https://ghproxy.com/https://github.com/TeamFlos/phira-ios-plist/raw/main/phira.plist">
+<a title="iPad" href="itms-services://?action=download-manifest&url=https://github.com/TeamFlos/phira-ios-plist/raw/main/phira.plist">
